--- a/.gitmodules
+++ b/.gitmodules
@@ -55,9 +55,9 @@
 [submodule "dired-sort-menu"]
 	path = dired-sort-menu
 	url = git@github.com:emacsmirror/dired-sort-menu.git
-[submodule "undo-tree"]
-	path = undo-tree
-	url = git@github.com:emacsmirror/undo-tree.git
 [submodule "auto-complete-clang"]
 	path = auto-complete-clang
 	url = git@github.com:brianjcj/auto-complete-clang.git
+[submodule "undo-tree"]
+	path = undo-tree
+	url = http://www.dr-qubit.org/git/undo-tree.git
