--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "undo-tree"]
 	path = undo-tree
 	url = http://www.dr-qubit.org/git/undo-tree.git
+[submodule "math-symbol-lists"]
+	path = math-symbol-lists
+	url = git@github.com:vspinu/math-symbol-lists.git
