--- a/.gitmodules
+++ b/.gitmodules
@@ -57,4 +57,4 @@
 	url = git@github.com:emacsmirror/dired-sort-menu.git
 [submodule "undo-tree"]
 	path = undo-tree
-	url = git@github.com:emacsmirror/undo-tree.git
+	url = http://www.dr-qubit.org/git/undo-tree.git
