--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "magit-svn"]
 	path = magit-svn
 	url = git@github.com:magit/magit-svn.git
+[submodule "org-link-travis"]
+	path = org-link-travis
+	url = git@github.com:aki2o/org-link-travis.git
